--- a/Client/product-management/src/app/components/login/login.component.html
+++ b/Client/product-management/src/app/components/login/login.component.html
@@ -1,31 +1,34 @@
 <div class="login-container">
-    <h2>Login</h2>
-  
-    <form (ngSubmit)="login()">
-      <div class="form-group">
-        <label for="username">Username:</label>
-        <input
-          type="text"
-          id="username"
-          [(ngModel)]="username"
-          name="username"
-          required
-        />
+  <h2>Login</h2>
+
+  <form [formGroup]="loginForm" (ngSubmit)="login()">
+    <div class="form-group">
+      <label for="username">Username:</label>
+      <input
+        type="text"
+        id="username"
+        formControlName="username"
+        required
+      />
+      <div *ngIf="loginForm.get('username')?.invalid && loginForm.get('username')?.touched" class="error-message">
+        Username is required
       </div>
-  
-      <div class="form-group">
-        <label for="password">Password:</label>
-        <input
-          type="password"
-          id="password"
-          [(ngModel)]="password"
-          name="password"
-          required
-        />
+    </div>
+
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input
+        type="password"
+        id="password"
+        formControlName="password"
+        required
+      />
+      <div *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched" class="error-message">
+        Password is required
       </div>
-  
-      <button type="submit">Login</button>
-      <p class="error-message" *ngIf="errorMessage">{{ errorMessage }}</p>
-    </form>
-  </div>
-  
+    </div>
+
+    <button type="submit" [disabled]="loginForm.invalid">Login</button>
+    <p class="error-message" *ngIf="errorMessage">{{ errorMessage }}</p>
+  </form>
+</div>
